@@ -1,3 +1,4 @@
+    ADDED: option: Panel > View > Show directories first
     ADDED: actions: Back/Forward in history
     ADDED: action: Set Focus to the Panel - shortcut: ESC
     ADDED: actions: Move Focus Up/Down - shortcut: CTRL+SHIFT+Up/Down
